[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morpheus"
version = "0.1.0"
description = "A reproducible harness for characterizing LLM serving performance."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Isabella Wu" }]

# Core analysis + load-generation deps. These install everywhere (incl. Mac),
# so the analysis layer and its tests run without a GPU. The serving backend
# (vLLM) is an optional extra because it requires CUDA — see [project.optional-dependencies].
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyarrow>=14.0",       # parquet for results/raw/
    "matplotlib>=3.7",
    "httpx>=0.27",         # async load generator client
    "tqdm>=4.66",
]

[project.optional-dependencies]
# CUDA-only. Do NOT install on a Mac/CPU box — the harness halts before it
# would ever import this. Pin loosely; the exact vLLM build depends on the
# target's CUDA/driver, which run_meta.json records.
serve = ["vllm>=0.6.0"]
dev = ["pytest>=8.0", "ruff>=0.6", "pytest-cov>=5.0"]

[project.scripts]
morpheus = "harness.cli:main"

[tool.setuptools]
packages = ["harness", "analysis"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
